supports removing a boid from a list
